# kestrel-lang

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  GOVERNANCE.rst  Makefile  README.rst  codecov.yml  governance.rst  pyproject.toml  setup.cfg
.github/: publish-to-pypi.yml
.github/ISSUE_TEMPLATE/: bug_report.md  doc_update.md  documentation-update-template.md
.github/workflows/: code-coverage.yml  code-style.yml  integration-testing.yml  kaas-docker-image.yml  publish-to-pypi.yml  stixshifter-module-verification.yml  unit-testing-kestrel2.yml  unit-testing.yml  unused-import.yml
config/: kestrel.toml
containers/docker/: Dockerfile
docs/: Makefile  README.rst  conf.py  configuration.rst  debug.rst  highlighttest.py  index.rst  installation.rst  language.rst  overview.rst  requirements.txt  runtime.rst  talks.rst  theory.rst  tutorial.rst
docs/_static/css/: logo.css  table.css
docs/deployment/: dockerhub.rst  index.rst  oci.rst
docs/installation/: analytics.rst  datasource.rst  index.rst  runtime.rst
docs/language/: commands.rst  eav.rst  ecgp.rst  index.rst  interface.rst  tac.rst  variable.rst
docs/overview/: businesslogic.rst  hunting.rst  index.rst  notrepeat.rst  nutshell.rst  packages.rst  symbiosis.rst
docs/source/: kestrel.analytics.interface.rst  kestrel.datasource.interface.rst  kestrel.datasource.retstruct.rst  kestrel.exceptions.rst  kestrel.session.rst  kestrel_analytics_docker.interface.rst  kestrel_analytics_python.interface.rst  kestrel_datasource_stixbundle.interface.rst  kestrel_datasource_stixshifter.interface.rst
logo/: README.md  svg2png.sh
packages-nextgen/kestrel_core/: pyproject.toml
packages-nextgen/kestrel_core/src/kestrel/: __future__.py  __init__.py  display.py  exceptions.py  session.py  utils.py
packages-nextgen/kestrel_core/src/kestrel/cache/: __init__.py  abc.py  base.py  data.py  inmemory.py  sqlite.py  utils.py
packages-nextgen/kestrel_core/src/kestrel/config/: internal.py  utils.py
packages-nextgen/kestrel_core/src/kestrel/frontend/: compile.py  kestrel.lark  parser.py  toir.py
packages-nextgen/kestrel_core/src/kestrel/frontend/mapping/: utils.py
packages-nextgen/kestrel_core/src/kestrel/frontend/mapping/entity/: stix.yaml
packages-nextgen/kestrel_core/src/kestrel/frontend/mapping/property/: stix.yaml
packages-nextgen/kestrel_core/src/kestrel/interface/: __init__.py  base.py  manager.py
packages-nextgen/kestrel_core/src/kestrel/interface/datasource/: __init__.py  abc.py  base.py  manager.py  utils.py
packages-nextgen/kestrel_core/src/kestrel/interface/datasource/codegen/: dataframe.py  sql.py
packages-nextgen/kestrel_core/src/kestrel/ir/: filter.py  graph.py  instructions.py
packages-nextgen/kestrel_core/src/kestrel/mapping/: data_model.py  transformers.py  utils.py
packages-nextgen/kestrel_core/src/kestrel/mapping/entityattribute/: ecs.yaml  stix.yaml
packages-nextgen/kestrel_core/src/kestrel/mapping/entityname/: alias.yaml  ecs.yaml
packages-nextgen/kestrel_core/tests/: test_cache_inmemory.py  test_cache_sqlite.py  test_config.py  test_interface_datasource_codegen_dataframe.py  test_interface_datasource_codegen_sql.py  test_ir_filter.py  test_ir_graph.py  test_ir_instructions.py  test_mapping.py  test_mapping_data_model.py  test_mapping_transformers.py  test_parser.py  test_session.py
packages-nextgen/kestrel_datasource_opensearch/: pyproject.toml
packages-nextgen/kestrel_datasource_opensearch/tests/: test_config.py  test_ossql.py
packages-nextgen/kestrel_interface_opensearch/: pyproject.toml
packages-nextgen/kestrel_interface_opensearch/tests/: test_config.py  test_ossql.py
packages-nextgen/kestrel_interface_sqlalchemy/: pyproject.toml
packages-nextgen/kestrel_interface_sqlalchemy/src/kestrel_interface_sqlalchemy/: __init__.py  config.py  interface.py
packages-nextgen/kestrel_interface_sqlalchemy/tests/: test_config.py
packages-nextgen/kestrel_jupyter/: pyproject.toml
packages-nextgen/kestrel_jupyter/src/kestrel_jupyter_kernel/: display.py  kernel.py  setup.py
packages-nextgen/kestrel_jupyter/src/kestrel_jupyter_kernel/codemirror/: setup.py
src/containers/docker/: Dockerfile  README.rst
src/containers/oci/: README.rst
src/kestrel/: __init__.py  __main__.py  cli.py  config.py  config.yaml  exceptions.py  semantics.py  session.py  symboltable.py  utils.py
src/kestrel/absinterface/: __init__.py  manager.py
src/kestrel/analytics/: __init__.py  interface.py  manager.py
src/kestrel/codegen/: commands.py  data.py  display.py  pattern.py  queries.py  relations.py  summary.py
src/kestrel/datasource/: __init__.py  (+3 more)
src/kestrel_analytics_docker/: config.py  interface.py
src/kestrel_analytics_python/: __init__.py  config.py  interface.py
src/kestrel_datasource_stixbundle/: __init__.py  interface.py
src/kestrel_datasource_stixshifter/: __init__.py  config.py  connector.py  diagnosis.py  interface.py  multiproc.py  query.py
src/kestrel_ipython/: magic.py
src/kestrel_jupyter_kernel/: config.py  kernel.py  setup.py
test-data/: test_bundle_2.json  test_bundle_3.json  test_bundle_5.json  test_bundle_nt_2.json  test_input_data_procs_list.json
tests/: doctored-1k.json  kestrel_python_analytics.py  powershell_search_stix_result.json  test_bundle.json  test_bundle_4.json  test_bundle_nt_1.json  test_cli.py  test_command_assign.py  test_command_disp.py  test_command_find.py  test_command_get.py  test_command_group.py  test_command_internal.py  test_command_join.py  test_command_load.py  test_command_merge.py  test_command_new.py  test_command_save.py  test_completion.py  test_display.py  test_exceptions.py  test_expressions.py  test_fast_translate.py  test_input_data_ips.csv  test_input_data_procs.csv  test_input_data_procs.json  test_input_data_procs_no_type.json  test_kernel_install.py  test_notebook_syntax_gen.py  test_parser.py  test_python_analytics.py  test_records.py  test_session.py  test_stixshifter.py  test_stixshifter_diagnosis.py  test_stixshifter_translator.py  test_timestamped.py  untest_fast_translate.py  utils.py
(+27 files in other folders)
