[metadata]
name = kestrel-lang
version = 1.5.2
description = Kestrel Threat Hunting Language
long_description = file:README.rst
long_description_content_type = text/x-rst
keywords =
    domain specific language
    cyber threat hunting
    extended detection and response 
url = https://github.com/opencybersecurityalliance/kestrel-lang
license = Apache 2.0 License
classifiers =
    Topic :: Security
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
	Documentation = https://kestrel.readthedocs.io/

[options]
packages = find:
package_dir =
    =src
scripts = bin/kestrel
python_requires = >= 3.7
install_requires =
    pyyaml
    lxml
    python-dateutil
    pandas
    requests
    lark>=1.1.3
    pyarrow>=5.0.0
    docker>=5.0.0
    stix-shifter>=4.4.0
    stix-shifter-utils>=4.4.0
    firepit>=2.3.6
    typeguard
tests_require =
    pytest

[options.packages.find]
where = src

[options.package_data]
* = *.lark, *.yaml
