[metadata]
name = kestrel-lang
version = 1.7.6
description = Kestrel Threat Hunting Language
long_description = file:README.rst
long_description_content_type = text/x-rst
keywords =
    domain specific language
    cyber threat hunting
    extended detection and response 
url = https://github.com/opencybersecurityalliance/kestrel-lang
license = Apache 2.0 License
classifiers =
    Topic :: Security
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
	Documentation = https://kestrel.readthedocs.io/

[options]
packages = find:
package_dir =
    =src
scripts =
    bin/kestrel
    bin/ikestrel
    bin/stix-shifter-diag
python_requires = >= 3.8
install_requires =
    typeguard>=4.1.5
    pyyaml>=6.0.1
    lxml>=4.9.3
    lark>=1.1.7
    pandas>=2.1.1
    pyarrow>=13.0.0
    docker>=6.1.3
    requests>=2.31.0
    nest-asyncio>=1.5.8
    stix-shifter==6.2.1
    stix-shifter-utils==6.2.1
    firepit>=2.3.29
tests_require =
    pytest

[options.packages.find]
where = src

[options.package_data]
* = *.lark, *.yaml
